--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
         }
         div{
             font-size: 10rem;
-            font-family: "Goldman", sans-serif;
+            font-family: Bahnschrift SemiBold;
             font-weight: 700;
-            letter-spacing: -5px;
             color: transparent;
             background-image: linear-gradient(45deg,red, violet, blue);
             background-clip: text;
-            -webkit-text-stroke: 1px white;
         }
         span{
             font-size: 11rem;
