--- a/404.html
+++ b/404.html
@@ -11,6 +11,7 @@
   <style>
     body {
       margin: 0;
+      user-select: none;
       background-image: linear-gradient(to right, #030649, #29236d);
       height: 100vh;
       display: flex;
