--- a/404.html
+++ b/404.html
@@ -3,106 +3,197 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>404 Lost in Space</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet"/>
-  </head>
-  <style>
-    body {
-      margin: 0;
-      user-select: none;
-      background-image: linear-gradient(to right, #030649, #29236d);
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
-      font-family: "Inter", sans-serif;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-    section.text {
-      height: 100vh;
-      transform: translateY(30px);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      color: white;
-    }
-    div.upText {
-      font-size: 3rem;
-      font-weight: 700;
-    }
-    div.text {
-      position: relative;
-      z-index: 10;
-      font-size: 25rem;
-      font-weight: 500;
-    }
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
 
-    div.imageRope {
-      animation: rope 2s infinite alternate ease-in-out;
-      transform-origin: top center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      translate: 0 -360px;
-    }
-    div.imageRope img.rope {
-      height: 100px;
-    }
-    div.imageRope img.astronaut {
-      transform: translateY(-100px);
-      height: 200px;
-    }
-    @keyframes rope {
-      0% {
-        transform: rotate(-45deg);
+      body {
+        user-select: none;
+        font-family: "Inter", sans-serif;
+        background: linear-gradient(to right, #030649, #29236d);
+        background-repeat: repeat;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        overflow: hidden;
       }
-      100% {
-        transform: rotate(45deg);
+
+      .stars,
+      .planets {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        overflow: hidden;
+        z-index: 0;
       }
-    }
-  </style>
+
+      .star {
+        position: absolute;
+        background-color: white;
+        border-radius: 50%;
+        animation: twinkle 1s infinite alternate ease-in-out;
+      }
+
+      @keyframes twinkle {
+        0% {
+          box-shadow: 0 0 10px 5px white;
+        }
+        100% {
+          box-shadow: 0 0 2px 2px white;
+        }
+      }
+
+      .planet {
+        position: absolute;
+        /* background-color: rgba(0, 65, 121, 0.729); */
+        background-image: linear-gradient(45deg, darkblue, blue);
+        border-radius: 50%;
+        opacity: 0.3;
+        border: white 1px solid;
+      }
+
+      section.text {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        color: white;
+        text-align: center;
+        z-index: 1;
+      }
+
+      .upText {
+        font-size: 2.5rem;
+        font-weight: 700;
+        margin-bottom: 1rem;
+      }
+
+      .text {
+        font-size: 20vw;
+        font-weight: 500;
+        position: relative;
+        line-height: 1;
+      }
+
+      .imageRope {
+        animation: rope 2s infinite alternate ease-in-out;
+        transform-origin: top center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        translate: 0 -16vw;
+      }
+      :root {
+        --ropeLength: 15vw;
+      }
+      .imageRope img.rope {
+        height: var(--ropeLength);
+        position: relative;
+        z-index: -2;
+        filter: drop-shadow(0 0 0px white);
+      }
+
+      .imageRope img.astronaut {
+        position: absolute;
+        top: calc(var(--ropeLength) - 2vw);
+        height: 15vw;
+        max-height: 400px;
+        translate: 0 -5vw;
+      }
+
+      @keyframes rope {
+        0% {
+          transform: rotate(-45deg);
+        }
+        100% {
+          transform: rotate(45deg);
+        }
+      }
+
+      /* @media (max-width: 600px) {
+      .upText {
+        font-size: 1.5rem;
+      }
+
+      .text {
+        font-size: 30vw;
+      }
+
+    } */
+    </style>
+  </head>
   <body>
+    <div class="planets">
+      <div class="planet"></div>
+      <div class="planet"></div>
+      <div class="planet"></div>
+      <div class="planet"></div>
+    </div>
     <div class="stars"></div>
+
     <section class="text">
       <div class="upText">Looks like you're lost in space</div>
       <div class="text">404</div>
       <div class="imageRope">
-        <img class="rope" src="https://dtbom.b-cdn.net/rope.png" />
-        <img class="astronaut" src="https://dtbom.b-cdn.net/astronaut.png" />
+        <img class="rope" src="https://dtbom.b-cdn.net/rope.png" alt="Rope" />
+        <img
+          class="astronaut"
+          src="https://dtbom.b-cdn.net/astronaut.png"
+          alt="Astronaut"
+        />
       </div>
     </section>
+
+    <script>
+      const starContainer = document.querySelector(".stars");
+      const planetContainer = document.querySelector(".planets");
+      const planets = document.querySelectorAll(".planet");
+
+      // Create stars
+      for (let i = 0; i < 100; i++) {
+        const star = document.createElement("div");
+        star.className = "star";
+
+        const size = `${Math.floor(Math.random() * 4) + 3}px`;
+        const posX = `${Math.floor(Math.random() * window.innerWidth)}px`;
+        const posY = `${Math.floor(Math.random() * window.innerHeight)}px`;
+
+        Object.assign(star.style, {
+          width: size,
+          height: size,
+          left: posX,
+          top: posY,
+          animationDelay: -1 * Math.floor(Math.random() * 10) + "s",
+        });
+
+        starContainer.appendChild(star);
+      }
+
+      // Randomize each planet's position and size
+      planets.forEach((planet) => {
+        const size = Math.floor(Math.random() * 50) + 150;
+        const posX = `${Math.floor(Math.random() * window.innerWidth)}px`;
+        const posY = `${Math.floor(Math.random() * window.innerHeight)}px`;
+
+        Object.assign(planet.style, {
+          width: `${size}px`,
+          height: `${size}px`,
+          left: posX,
+          top: posY,
+        });
+      });
+    </script>
   </body>
-  <script>
-    const starContainer = document.querySelector(".stars");
-    for (let i = 0; i < 100; i++) {
-      const star = document.createElement("div");
-      star.className = "star";
-      // star.style.height = "10px";
-      // star.style.width = "10px";
-      const min = 3;
-      const max = 6;
-
-      let num = Math.floor(Math.random() * (max - min)) + min + "px";
-      console.log(num);
-      star.style.height = num;
-      star.style.width = num;
-      star.style.backgroundColor = "white";
-      star.style.borderRadius = "50%";
-      star.style.position = "absolute";
-
-      let width = window.innerWidth;
-      let height = window.innerHeight;
-      const posX = Math.floor(Math.random() * width) + "px";
-      const posY = Math.floor(Math.random() * height) + "px";
-      star.style.left = posX;
-      star.style.top = posY;
-
-      starContainer.appendChild(star);
-    }
-  </script>
 </html>
