Added Custom Pages

--- a/custom-pages/index.html
+++ b/custom-pages/index.html
@@ -13,7 +13,7 @@
   <h1>Custom New Tab Gallery</h1>
   <div class="gallery">
     <!-- Card 1 -->
-    <div class="card">
+    <a class="card" href="Home Page 1/Home Page 1.html">
       <img src="Images/Home Page1.png" alt="Home Page 1" class="thumbnail"/>
       <div class="content">
         <div class="title">Fancy Grid Layout Page</div>
@@ -21,10 +21,10 @@
           Utility Links, Profile, Motivational quotes
         </div>
       </div>
-    </div>
+    </a>
 
     <!-- Card 2 -->
-    <div class="card">
+    <a class="card" href="Home Page 3D/Home Page 3D.html">
       <img src="Images/Home Page 3D.png" alt="Tab 2" class="thumbnail" />
       <div class="content">
         <div class="title">3D Style</div>
@@ -32,10 +32,10 @@
           Beautiful Cyberpunk themed custom page.
         </div>
       </div>
-    </div>
+    </a>
 
     <!-- Card 3 -->
-    <div class="card">
+    <a class="card" href="Home Page 2/Home Page 2.html">
       <img src="Images/Home Page 2.png" alt="Tab 3" class="thumbnail" />
       <div class="content">
         <div class="title">Minimalistic Stylish Page</div>
@@ -43,9 +43,9 @@
           Interactive Circular Menu and Utility Link Side Bar.
         </div>
       </div>
-    </div>
+    </a>
 
-    <div class="card">
+    <a class="card" href="Home Page 3/Home Page 3.html">
       <img src="Images/Home Page 3.png" alt="Tab 4" class="thumbnail" />
       <div class="content">
         <div class="title">Minimalistic Groot Page</div>
@@ -53,9 +53,9 @@
           For Guardians Of The Galaxy Fans!
         </div>
       </div>
-    </div>
+    </a>
     
-    <div class="card">
+    <a class="card" href="Home Page 4/Chrome Page 4.html">
       <img src="Images/Home Page 4.png" alt="Tab 5" class="thumbnail" />
       <div class="content">
         <div class="title">Our Flagship Product</div>
@@ -63,7 +63,17 @@
           Modern UI, Glassmorphism, Utility Tools, Calender, Clock, Integrated Weather App, Personal Signature
         </div>
       </div>
-    </div>
+    </a>
+    
+    <a class="card" href="Home Page 5/Chrome Page.html">
+      <img src="Images/Home Page 5.png" alt="Tab 6" class="thumbnail" />
+      <div class="content">
+        <div class="title">Our Flagship Product</div>
+        <div class="desc">
+          Minimalistic space themed reflection styled page!
+        </div>
+      </div>
+    </a>
 
 
   </div>
