Modified Custom Pages to enhance functionality and UI

--- a/custom-pages/Home Page 2/Home Page 2.html
+++ b/custom-pages/Home Page 2/Home Page 2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Sankalp Omar</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="Home Page 2.css">
     <link href='https://fonts.googleapis.com/css?family=Playwrite PE' rel='stylesheet'>
     <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/599/599447.png"/>
