--- a/custom-pages/Home Page 5/Chrome Page.html
+++ b/custom-pages/Home Page 5/Chrome Page.html
@@ -3,15 +3,14 @@
 
 <head>
   <meta name="theme-color" content="red" />
-  <title>Water Monke</title>
+  <title>Home Page</title>
   <link rel="stylesheet" href="Chrome Page.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 </head>
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link rel="shortcut icon" href="/favicon.ICO" type="image/x-icon" />
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic&family=Roboto:wght@500&display=swap"
-  rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic&family=Roboto:wght@500&display=swap" rel="stylesheet" />
+<link rel="shortcut icon" href="../Images/icon.png" type="image/x-icon">
 
 <body>
   <div class="mode">
