--- a/custom-pages/index.html
+++ b/custom-pages/index.html
@@ -4,21 +4,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Custom Tab Gallery</title>
+  <title>NovaTab</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="shortcut icon" href="Images/icon.png" type="image/x-icon">
 </head>
 
 <body>
-  <h1>Custom New Tab Gallery</h1>
+  <h1>NovaTab - The Smarter And Better New Tabs</h1>
   <div class="gallery">
     <!-- Card 1 -->
     <a class="card" href="Home Page 1/Home Page 1.html">
       <img src="Images/Home Page1.png" alt="Home Page 1" class="thumbnail"/>
       <div class="content">
-        <div class="title">Fancy Grid Layout Page</div>
+        <div class="title">NovaTab: The Awesome Dev</div>
         <div class="desc">
-          Utility Links, Profile, Motivational quotes
+          “A bold new tab made for devs who code, connect, and conquer — with style, links, and a bit of attitude.”
         </div>
       </div>
     </a>
@@ -27,9 +27,9 @@
     <a class="card" href="Home Page 3D/Home Page 3D.html">
       <img src="Images/Home Page 3D.png" alt="Tab 2" class="thumbnail" />
       <div class="content">
-        <div class="title">3D Style</div>
+        <div class="title">NovaTab: Cyber Grid</div>
         <div class="desc">
-          Beautiful Cyberpunk themed custom page.
+          “A neon-charged launchpad for your digital world — icons, speed, and sci-fi vibes all in one tab.”
         </div>
       </div>
     </a>
@@ -38,9 +38,9 @@
     <a class="card" href="Home Page 2/Home Page 2.html">
       <img src="Images/Home Page 2.png" alt="Tab 3" class="thumbnail" />
       <div class="content">
-        <div class="title">Minimalistic Stylish Page</div>
+        <div class="title">NovaTab: Color Chaos</div>
         <div class="desc">
-          Interactive Circular Menu and Utility Link Side Bar.
+          “A vibrant explosion of icons, color wheels, and curiosity — where creativity meets controlled madness.”
         </div>
       </div>
     </a>
@@ -48,9 +48,9 @@
     <a class="card" href="Home Page 3/Home Page 3.html">
       <img src="Images/Home Page 3.png" alt="Tab 4" class="thumbnail" />
       <div class="content">
-        <div class="title">Minimalistic Groot Page</div>
+        <div class="title">NovaTab: Groot Mode</div>
         <div class="desc">
-          For Guardians Of The Galaxy Fans!
+          “A chill, character-driven tab that keeps things simple, soft, and social — say hi to Groot!”
         </div>
       </div>
     </a>
@@ -58,9 +58,9 @@
     <a class="card" href="Home Page 4/Chrome Page 4.html">
       <img src="Images/Home Page 4.png" alt="Tab 5" class="thumbnail" />
       <div class="content">
-        <div class="title">Our Flagship Product</div>
+        <div class="title">NovaTab: Night Drive</div>
         <div class="desc">
-          Modern UI, Glassmorphism, Utility Tools, Calender, Clock, Integrated Weather App, Personal Signature
+          “A neon-drenched dashboard that shifts gears between hustle and chill — where speed meets utility.”
         </div>
       </div>
     </a>
@@ -68,9 +68,9 @@
     <a class="card" href="Home Page 5/Chrome Page.html">
       <img src="Images/Home Page 5.png" alt="Tab 6" class="thumbnail" />
       <div class="content">
-        <div class="title">Our Flagship Product</div>
+        <div class="title">NovaTab: The Cosmic Dashboard</div>
         <div class="desc">
-          Minimalistic space themed reflection styled page!
+          A vibrant, animated new tab page with smart bookmarks, tools, and a surreal space vibe — built to boost focus and spark creativity.
         </div>
       </div>
     </a>
@@ -78,5 +78,5 @@
 
   </div>
 </body>
-
+<script src="faviconImport.js" type="module"></script>
 </html>
