--- a/custom-pages/Home Page 1/Home Page 1.html
+++ b/custom-pages/Home Page 1/Home Page 1.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Home Page 1.css">
+    <link rel="shortcut icon" href="../Images/icon.png" type="image/x-icon">
 </head>
 <body>
     <div class="whole">
@@ -16,20 +17,20 @@
         <h2>Sankalp</h2>
     <div class="link">
         <h3 class="left_link_head">USEFUL LINKS</h3>
-            <div><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT769bgfTT-i73ZB4S0VR6Z_A4YEZyAOa92YQ&s"><a class="left_link" href="">YOUTUBE</a></div>
-            <div><img src="https://cdn-icons-png.flaticon.com/512/1626/1626319.png"><a class="left_link" href="">CODEPEN</a></div>
-            <div><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOIn3J-1LDqnq8rmxgeTDZEz9SZpiO0A9i0A&s"><a class="left_link" href="">STACK OVERFLOW</a></div>
-            <div><img src="https://cdn.worldvectorlogo.com/logos/github-icon-2.svg"><a class="left_link" href="">GITHUB</a></div>
-            <div><img src="https://static.vecteezy.com/system/resources/previews/021/608/790/non_2x/chatgpt-logo-chat-gpt-icon-on-black-background-free-vector.jpg"><a class="left_link" href="">CHATGPT</a></div>
+            <div><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT769bgfTT-i73ZB4S0VR6Z_A4YEZyAOa92YQ&s"><a class="left_link" href="https:/www.youtube.com">YOUTUBE</a></div>
+            <div><img src="https://cdn-icons-png.flaticon.com/512/1626/1626319.png"><a class="left_link" href="https:/www.codepen.io">CODEPEN</a></div>
+            <div><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOIn3J-1LDqnq8rmxgeTDZEz9SZpiO0A9i0A&s"><a class="left_link" href="https://stackoverflow.com">STACK OVERFLOW</a></div>
+            <div><img src="https://cdn.worldvectorlogo.com/logos/github-icon-2.svg"><a class="left_link" href="https://github.com/">GITHUB</a></div>
+            <div><img src="https://static.vecteezy.com/system/resources/previews/021/608/790/non_2x/chatgpt-logo-chat-gpt-icon-on-black-background-free-vector.jpg"><a class="left_link" href="https://chatgpt.com/">CHATGPT</a></div>
         <h3 class="left_link_head">SOCIAL MEDIA</h3>    
-            <div><img src="https://images.icon-icons.com/1476/PNG/512/whatsapp_101778.png"><a class="left_link" href="">WHATSAPP</a></div>
-            <div><img src="https://cdn-icons-png.flaticon.com/512/5968/5968804.png"><a class="left_link" href="">TELEGRAM</a></div>
-            <div><img src="https://images.icon-icons.com/2642/PNG/512/google_mail_gmail_logo_icon_159346.png"><a class="left_link" href="">GMAIL</a></div>
-            <div><img src="https://static.vecteezy.com/system/resources/previews/018/930/415/non_2x/instagram-logo-instagram-icon-transparent-free-png.png"><a class="left_link" href="">INSTAGRAM</a></div>
-            <div><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaAUaoQkuBxEL8daj6_2Smx1_29Urz8nAxng&s"><a class="left_link" href="">REDDIT</a></div>
-            <div><img src="https://cdn-icons-png.flaticon.com/512/226/226235.png"><a class="left_link" href="">TWITTER</a></div>
-            <div><img src="https://cdn-icons-png.flaticon.com/512/3670/3670157.png"><a class="left_link" href="">DISCORD</a></div>
-            <div><img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/circle-linkedin-512.png"><a class="left_link" href="">LINKEDIN</a></div>
+            <div><img src="https://images.icon-icons.com/1476/PNG/512/whatsapp_101778.png"><a class="left_link" href="https://web.whatsapp.com">WHATSAPP</a></div>
+            <div><img src="https://cdn-icons-png.flaticon.com/512/5968/5968804.png"><a class="left_link" href="https://web.telegram.org/">TELEGRAM</a></div>
+            <div><img src="https://images.icon-icons.com/2642/PNG/512/google_mail_gmail_logo_icon_159346.png"><a class="left_link" href="https://mail.google.com/">GMAIL</a></div>
+            <div><img src="https://static.vecteezy.com/system/resources/previews/018/930/415/non_2x/instagram-logo-instagram-icon-transparent-free-png.png"><a class="left_link" href="https://www.instagram.com/">INSTAGRAM</a></div>
+            <div><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaAUaoQkuBxEL8daj6_2Smx1_29Urz8nAxng&s"><a class="left_link" href="https://www.reddit.com/">REDDIT</a></div>
+            <div><img src="https://cdn-icons-png.flaticon.com/512/226/226235.png"><a class="left_link" href="https://x.com/">TWITTER</a></div>
+            <div><img src="https://cdn-icons-png.flaticon.com/512/3670/3670157.png"><a class="left_link" href="https://discord.com/">DISCORD</a></div>
+            <div><img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/circle-linkedin-512.png"><a class="left_link" href="https://linkedin.com/">LINKEDIN</a></div>
         </div>
     </aside>
 
@@ -73,17 +74,17 @@
     </div>
 
     <aside class="right">
-            <td><img class="google" src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-webinar-optimizing-for-success-google-business-webinar-13.png"><a class="right_link" href="">Google Docs</a></td><br>
-            <td><img class="google" src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-webinar-optimizing-for-success-google-business-webinar-13.png"><a class="right_link" href="">Google Sheets</a></td><br>
-            <td><img class="google" src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-webinar-optimizing-for-success-google-business-webinar-13.png"><a class="right_link" href="">Google Slides</a></td><br>
-            <td><img class="google" src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-webinar-optimizing-for-success-google-business-webinar-13.png"><a class="right_link" href="">Google Classroom</a></td><br>
-            <td><img class="google" src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-webinar-optimizing-for-success-google-business-webinar-13.png"><a class="right_link" href="">Google Keeps</a></td><br>
-            <td><img class="google" src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-webinar-optimizing-for-success-google-business-webinar-13.png"><a class="right_link" href="">Google Maps</a></td><br>
-            <td><img class="google" src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-webinar-optimizing-for-success-google-business-webinar-13.png"><a class="right_link" href="">Google Meet</a></td><br>
-            <td><img class="google" src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-webinar-optimizing-for-success-google-business-webinar-13.png"><a class="right_link" href="">Google Drive</a></td><br>
+            <td><img class="google" src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-webinar-optimizing-for-success-google-business-webinar-13.png"><a class="right_link" href="https://docs.google.com/document/u/0/">Google Docs</a></td><br>
+            <td><img class="google" src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-webinar-optimizing-for-success-google-business-webinar-13.png"><a class="right_link" href="https://sheets.google.com/">Google Sheets</a></td><br>
+            <td><img class="google" src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-webinar-optimizing-for-success-google-business-webinar-13.png"><a class="right_link" href="https://docs.google.com/presentation/u/0/">Google Slides</a></td><br>
+            <td><img class="google" src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-webinar-optimizing-for-success-google-business-webinar-13.png"><a class="right_link" href="https://classroom.google.com/">Google Classroom</a></td><br>
+            <td><img class="google" src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-webinar-optimizing-for-success-google-business-webinar-13.png"><a class="right_link" href="https://keep.google.com/">Google Keeps</a></td><br>
+            <td><img class="google" src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-webinar-optimizing-for-success-google-business-webinar-13.png"><a class="right_link" href="https://maps.google.com/">Google Maps</a></td><br>
+            <td><img class="google" src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-webinar-optimizing-for-success-google-business-webinar-13.png"><a class="right_link" href="https://drive.google.com/drive">Google Drive</a></td><br>
     </aside>
-</div>    
+</div>  
 <script>
+
 const greeting = document.getElementById("greeting");
 
 const now = new Date();
@@ -119,19 +120,19 @@ setInterval(updateClock, 1000);
 const quotes = [
   { text: "The only way to do great work is to love what you do.", author: "Steve Jobs" },
   { text: "Success is not final, failure is not fatal: It is the courage to continue that counts.", author: "Winston Churchill" },
-  { text: "You miss 100% of the shots you don’t take.", author: "Wayne Gretzky" },
+  { text: "You miss 100% of the shots you don't take.", author: "Wayne Gretzky" },
   { text: "In the middle of every difficulty lies opportunity.", author: "Albert Einstein" },
   { text: "Do what you can, with what you have, where you are.", author: "Theodore Roosevelt" },
   { text: "Believe you can and you're halfway there.", author: "Theodore Roosevelt" },
   { text: "Stay hungry, stay foolish.", author: "Steve Jobs" },
-  { text: "Whether you think you can or you think you can’t, you’re right.", author: "Henry Ford" },
+  { text: "Whether you think you can or you think you can't, you're right.", author: "Henry Ford" },
   { text: "The future depends on what you do today.", author: "Mahatma Gandhi" },
   { text: "The best way to predict the future is to invent it.", author: "Alan Kay" },
   { text: "Push yourself, because no one else is going to do it for you.", author: "Unknown" },
-  { text: "Don’t watch the clock; do what it does. Keep going.", author: "Sam Levenson" },
+  { text: "Don't watch the clock; do what it does. Keep going.", author: "Sam Levenson" },
   { text: "Great minds discuss ideas; average minds discuss events; small minds discuss people.", author: "Eleanor Roosevelt" },
-  { text: "If you’re going through hell, keep going.", author: "Winston Churchill" },
-  { text: "Don’t be afraid to give up the good to go for the great.", author: "John D. Rockefeller" },
+  { text: "If you're going through hell, keep going.", author: "Winston Churchill" },
+  { text: "Don't be afraid to give up the good to go for the great.", author: "John D. Rockefeller" },
   { text: "If you want to lift yourself up, lift up someone else.", author: "Booker T. Washington" },
   { text: "What lies behind us and what lies before us are tiny matters compared to what lies within us.", author: "Ralph Waldo Emerson" },
   { text: "Happiness is not something ready-made. It comes from your own actions.", author: "Dalai Lama" },
@@ -139,14 +140,14 @@ const quotes = [
   { text: "It always seems impossible until it's done.", author: "Nelson Mandela" },
   { text: "Act as if what you do makes a difference. It does.", author: "William James" },
   { text: "Success usually comes to those who are too busy to be looking for it.", author: "Henry David Thoreau" },
-  { text: "Don’t limit your challenges. Challenge your limits.", author: "Jerry Dunn" },
+  { text: "Don't limit your challenges. Challenge your limits.", author: "Jerry Dunn" },
   { text: "Dream big and dare to fail.", author: "Norman Vaughan" },
   { text: "Do not wait to strike till the iron is hot; but make it hot by striking.", author: "William Butler Yeats" },
   { text: "Strive not to be a success, but rather to be of value.", author: "Albert Einstein" },
-  { text: "The harder you work for something, the greater you’ll feel when you achieve it.", author: "Unknown" },
-  { text: "Don’t let yesterday take up too much of today.", author: "Will Rogers" },
-  { text: "Opportunities don’t happen. You create them.", author: "Chris Grosser" },
-  { text: "Everything you’ve ever wanted is on the other side of fear.", author: "George Addair" }
+  { text: "The harder you work for something, the greater you'll feel when you achieve it.", author: "Unknown" },
+  { text: "Don't let yesterday take up too much of today.", author: "Will Rogers" },
+  { text: "Opportunities don't happen. You create them.", author: "Chris Grosser" },
+  { text: "Everything you've ever wanted is on the other side of fear.", author: "George Addair" }
 ];
 
 const quoteText = document.getElementById("quote");
@@ -172,8 +173,8 @@ async function displayQuote() {
     const quote = quotes[random];
     console.log(random);
 
-    await typeWriter(quoteText, quote.text, 40);
-    await typeWriter(authorText, `- ${quote.author}`, 40);
+    await typeWriter(quoteText, quote.text, 30);
+    await typeWriter(authorText, `- ${quote.author}`, 30);
 }
 
 // Initial quote
