--- a/custom-pages/Home Page 3D/Home Page 3D.html
+++ b/custom-pages/Home Page 3D/Home Page 3D.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="Home Page 3D.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home Page</title>
+    <link rel="shortcut icon" href="../Images/icon.png" type="image/x-icon">
 </head>
 
 <body>
