--- a/custom-pages/Home Page 4/Chrome Page 4.html
+++ b/custom-pages/Home Page 4/Chrome Page 4.html
@@ -2,16 +2,14 @@
 <html lang="en">
 
 <head>
-        <title>Sankalp Omar</title>
+        <title>Home Page</title>
         <link rel="stylesheet" href="Chrome Page 4.css" />
         <link href="https://fonts.googleapis.com/css?family=Playwrite PE" rel="stylesheet" />
-        <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/8794/8794260.png" />
-
         <!-- Fonts Imported -->
         <link href="https://fonts.cdnfonts.com/css/harlow-solid-italic" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Sixtyfour+Convergence&display=swap" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
-                rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet" />
+        <link rel="shortcut icon" href="../Images/icon.png" type="image/x-icon">
 </head>
 
 <body>
