--- a/404.html
+++ b/404.html
@@ -119,11 +119,10 @@
       <div class="upText">Looks like you're lost in space</div>
       <div class="text">404</div>
       <div class="imageRope">
-        <img class="rope" src="https://dtbom.b-cdn.net/rope.png" alt="Rope" />
+        <img class="rope" src="Assets/Images/rope.png" alt="Rope" />
         <img
           class="astronaut"
-          src="https://dtbom.b-cdn.net/astronaut.png"
-          alt="Astronaut"
+          src="Assets/Images/astronaut.png"
         />
       </div>
     </section>
