--- a/pyodide-calc/index.html
+++ b/pyodide-calc/index.html
@@ -5,7 +5,7 @@
   <title>dtBOM - pyDet</title>
   <link rel="shortcut icon" href="https://pics.craiyon.com/2025-07-03/uqcI9KktSR2uPChvgvKO3g.webp" type="image/x-icon">
   <script src="https://cdn.jsdelivr.net/pyodide/v0.25.1/full/pyodide.js"></script>
-  <link rel="stylesheet" href="pyodide.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -62,7 +62,7 @@ a * 2
       </div>
       <div id="ads"></div>
   </div>
-</div>
 </body>
-<script src="pyodide.js"></script>
+</div>
+<script src="script.js"></script>
 </html>
