--- a/waiting-is-awesome/index.html
+++ b/waiting-is-awesome/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Waiting is Awesome</title>
+    <link rel="shortcut icon" href="../Assets/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaQueries.css">
 
