--- a/waiting-is-awesome/index.html
+++ b/waiting-is-awesome/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Waiting is Awesome</title>
-    <link rel="shortcut icon" href="../Assets/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://github.com/sankalp6115/dtbom-space/blob/main/favicon.png?raw=true" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaQueries.css">
 
