Made waiting-is-awesome mobile friendly

--- a/waiting-is-awesome/index.html
+++ b/waiting-is-awesome/index.html
@@ -784,9 +784,9 @@
             <span>Waiting is Awes</span><div class="o"></div><span>me</span>    
         </section>
         <section class="navbar">
-            <a href="#">Homepage</a>
-            <a href="#">Loaders For Everyone</a>
-            <a href="#">About Me</a>
+            <a href="https://www.dtbom.space">Homepage</a>
+            <a href="https://github.com/sankalp6115/dtbom-space/blob/main/waiting-is-awesome/index.html">Loaders For Everyone</a>
+            <a href="https://sankalp6115.dtbom.space/">About Me</a>
         </section>
 
         <h3>VISIT</h3>
@@ -797,12 +797,12 @@
             <a href="#">Awesome Projects</a> -->
         </section>
 
-        <h3>LEGAL</h3>
+        <!-- <h3>LEGAL</h3>
         <section class="legal">
             <a href="#">Terms Of Use </a>
             <a href="#">Privacy Policies</a>
             <a href="#">Cookies Policy</a>
-        </section>
+        </section> -->
         
         <h3 class="social-h3">Find Us On</h3>
         <div class="social">
