--- a/griddy/index.html
+++ b/griddy/index.html
@@ -25,10 +25,10 @@
     <button id="loadUrlBtn">Load from URL</button>
 
     <label for="gridM">Grid Rows (m)</label>
-    <input type="number" id="gridM" value="20" min="1" max="200" />
+    <input type="number" id="gridM" value="20" min="1" max="100" />
 
     <label for="gridN">Grid Columns (n)</label>
-    <input type="number" id="gridN" value="20" min="1" max="200" />
+    <input type="number" id="gridN" value="20" min="1" max="100" />
 
     <label for="satBoost">Saturation Boost</label>
     <input type="range" id="satBoost" min="1" max="3" step="0.05" value="1" />
@@ -43,7 +43,7 @@
     <input type="color" id="borderColor" value="#1e1e1e" />
 
     <label for="borderWidth">Border Width (px)</label>
-    <input type="number" id="borderWidth" min="0.1" max="10" value="1" step="0.5" />
+    <input type="number" id="borderWidth" min="1" max="10" value="1" step="0.5" checked/>
 
     <button id="downloadBtn" role="button" type="button">Download Result</button>
 
