--- a/novatab/Home Page 3/Home Page 3.html
+++ b/novatab/Home Page 3/Home Page 3.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="Home Page 3.css">
-    <link rel="shortcut icon" href="../Images/icon.png" type="image/x-icon">
+    <link rel="icon" href="https://github.com/sankalp6115/dtbom-space/blob/main/Assets/icon.png?raw=true" type="image/x-icon">
 </head>
 <body>
 
