--- a/pyodide-calc/index.html
+++ b/pyodide-calc/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>dtBOM - pyDet</title>
-  <link rel="shortcut icon" href="https://pics.craiyon.com/2025-07-03/uqcI9KktSR2uPChvgvKO3g.webp" type="image/x-icon">
+  <link rel="icon" href="https://github.com/sankalp6115/dtbom-space/blob/main/Assets/icon.png?raw=true" type="image/x-icon">
   <script src="https://cdn.jsdelivr.net/pyodide/v0.25.1/full/pyodide.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
