--- a/griddy/index.html
+++ b/griddy/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Griddy - Pixelify Images</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="" type="image/x-icon">
+  <link rel="icon" href="https://github.com/sankalp6115/dtbom-space/blob/main/Assets/icon.png?raw=true" type="image/x-icon">
 </head>
 
 <body>
