--- a/mark-it-mine/index.html
+++ b/mark-it-mine/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/pdf-lib@1.17.0/dist/pdf-lib.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="https://github.com/sankalp6115/dtbom-space/blob/main/Assets/icon.png?raw=true" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-gray-50 text-gray-900">
