--- a/novatab/Home Page 1/Home Page 1.html
+++ b/novatab/Home Page 1/Home Page 1.html
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Home Page 1.css">
-    <link rel="shortcut icon" href="../Images/icon.png" type="image/x-icon">
+    <link rel="icon" href="https://github.com/sankalp6115/dtbom-space/blob/main/Assets/icon.png?raw=true" type="image/x-icon">
 </head>
 <body>
     <div class="whole">
