--- a/novatab/Home Page 2/Home Page 2.html
+++ b/novatab/Home Page 2/Home Page 2.html
@@ -4,7 +4,7 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="Home Page 2.css">
     <link href='https://fonts.googleapis.com/css?family=Playwrite PE' rel='stylesheet'>
-    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/599/599447.png"/>
+    <link rel="icon" href="https://github.com/sankalp6115/dtbom-space/blob/main/Assets/icon.png?raw=true" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
