--- a/novatab/Home Page 3D/Home Page 3D.html
+++ b/novatab/Home Page 3D/Home Page 3D.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="shortcut icon" href="../Images/icon.png" type="image/x-icon">
+    <link rel="icon" href="https://github.com/sankalp6115/dtbom-space/blob/main/Assets/icon.png?raw=true" type="image/x-icon">
 </head>
 
 <body>
