--- a/novatab/Home Page 4/Chrome Page 4.html
+++ b/novatab/Home Page 4/Chrome Page 4.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.cdnfonts.com/css/harlow-solid-italic" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Sixtyfour+Convergence&display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet" />
-        <link rel="shortcut icon" href="../Images/icon.png" type="image/x-icon">
+        <link rel="icon" href="https://github.com/sankalp6115/dtbom-space/blob/main/Assets/icon.png?raw=true" type="image/x-icon">
 </head>
 
 <body>
