--- a/novatab/Home Page 5/Chrome Page.html
+++ b/novatab/Home Page 5/Chrome Page.html
@@ -10,7 +10,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic&family=Roboto:wght@500&display=swap" rel="stylesheet" />
-<link rel="shortcut icon" href="../Images/icon.png" type="image/x-icon">
+<link rel="icon" href="https://github.com/sankalp6115/dtbom-space/blob/main/Assets/icon.png?raw=true" type="image/x-icon">
 
 <body>
   <div class="mode">
